general refactor to permit undo, gui tweaks